@@ -1,4 +1,7 @@
 useDynLib(FLOPART, .registration=TRUE)
 importFrom(Rcpp, evalCpp)
+import(data.table)
 export(FLOPART_interface)
+export(FLOPART_data)
+export(FLOPART)
 export(get_label_code)
